--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 grails-cucumber Version 0.2.3 (unreleased)
 
   * fixed formatter crash when a before hook throws.
+  * updated to cucumber-jvm api (RC21)
 
 _____________________________________________________________________________
 grails-cucumber Version 0.2.2 (10th January 2012, tags/0.2.2)
